<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pantry"
            android:icon="@drawable/home_logo"
            android:title="@string/menu_pantry" />
        <item
            android:id="@+id/nav_insert"
            android:icon="@drawable/myitem_logo"
            android:title="@string/menu_insert" />
        <item
            android:id="@+id/nav_shopping"
            android:icon="@drawable/shopping_logo"
            android:title="@string/menu_shopping" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile_logo"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_logo"
            android:title="@string/menu_settings" />
    </group>

</menu>