<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.shopping.ShoppingFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp"
    android:layout_margin="4dp"
    android:weightSum="3">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shoppingTitle"
        android:textSize="19dp"
        android:textAlignment="center"
        android:gravity="center"
        style="@style/defTextView"
        android:layout_weight="0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:weightSum="5">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/shoppingRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_pantry_list"
            android:gravity="center"
            android:padding="8dp"
            android:layout_weight="4">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/shoppingCounter"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="16dp">
            <EditText
                android:id="@+id/fileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:hint="@string/shoppingFileName" />
            <ImageButton
                android:id="@+id/downloadBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/download_logo" />
            <ImageButton
                android:id="@+id/shareBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/share_logo" />

        </LinearLayout>
        <Button
            android:id="@+id/emptyCartBtn"
            style="@style/defButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoppingCreate" />
    </LinearLayout>

</LinearLayout>
