<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.insert.PutMyItemFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="9">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_weight="4">

        <ImageView
            android:id="@+id/putImg"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageButton
            android:id="@+id/cancelImgBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/putImg"
            app:layout_constraintEnd_toEndOf="@+id/putImg"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/putImg"
            app:layout_constraintTop_toTopOf="@+id/putImg"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@android:drawable/btn_dialog" />
        <ImageButton
            android:id="@+id/openCameraBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@android:drawable/ic_menu_camera"
            app:layout_constraintBottom_toBottomOf="@+id/putImg"
            app:layout_constraintEnd_toEndOf="@+id/putImg"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/putImg"
            app:layout_constraintTop_toTopOf="@+id/putImg"
            app:layout_constraintVertical_bias="1.0" />
        <ImageButton
            android:id="@+id/openGalleryBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@android:drawable/ic_menu_gallery"
            app:layout_constraintBottom_toBottomOf="@+id/putImg"
            app:layout_constraintEnd_toEndOf="@+id/putImg"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/putImg"
            app:layout_constraintTop_toTopOf="@+id/putImg"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="4"
        android:gravity="center">

        <TextView
            android:id="@+id/barcodePut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/defTextView" />
        <EditText
            android:id="@+id/putName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/putName"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/putDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/putDescription"
            android:inputType="textMultiLine"
            android:layout_margin="8dp" />

    </LinearLayout>

    <Button
        android:id="@+id/putItemBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/putConfirm"
        android:layout_weight="1" />

</LinearLayout>

